testing/Travis/testcases/TypeChecker/shouldFail/CompositionTypeMismatch.adl
CONTEXT CompositionTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT CompositionTypeMismatchCheck
{+ Test that composition fails when target of left operand does not match source of right operand.
   This verifies the type checker correctly rejects r[A*B];r~[B*A] due to type mismatch. +}

RELATION r[A*B]
RELATION result[A*C]

RULE testCompositionFail: result = r;r~

ENDCONTEXT
